# kims-careeros-

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  MEMORY.md  PROGRESS.md  claude.bat  cookie.txt  cookie5.txt  deploy.sh  next.config.js  package-lock.json  package.json  server-deploy.sh  start.bat  tailwind.config.js  todos-data.sql  tsconfig.json  tsconfig.tsbuildinfo
.claude/skills/ai-os-framework/: README.md  SKILL.md  onboarding.md  project-example.md  project-knowledge-base.md
.claude/skills/hr-masters-roundtable/: SKILL.md  demo.html
desktop-pet/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
desktop-pet/src/: App.tsx
desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
desktop-pet/src-tauri/icons/: icon.icns
desktop-pet/src-tauri/src/: lib.rs  main.rs
docs/: PRD-v1.2.md  PRODUCT.md  TECH-PITFALLS.md
memory/: MEMORY.md  design-spec-v1.2.md  domain-icp-filing.md  project-kims-careeros.md  project-overview.md  交接笔记-2026-06-25.md  交接笔记-2026-07-01.md  交接笔记-2026-07-09.md  交接笔记-2026-07-13.md
prisma/: schema.prisma
scripts/: remove-white-bg.mjs  seed-quotes.js  sync-ob-tracks.js
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx  (+1 more)
src/components/: AISkillPanel.tsx  AntdConfigProvider.tsx  AntdStyleRegistry.tsx  AttachmentList.tsx  FileUpload.tsx  FloatingPet.tsx  PetSummon.tsx  PlaceholderPage.tsx  ResumeParseModal.tsx
src/data/: domain-tracks.ts  pet-settings.json
src/lib/: design-tokens.ts  font-styles.ts  pet-settings.ts  themes.ts  view-transition.ts
(+141 files in other folders)
