[package]
name = "cheese"
version = "0.1.0"
description = "芝士 — Kim's AI Desktop Pet"
authors = ["Kim"]
edition = "2021"

[lib]
name = "kims_careeros_pet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
